--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -50,7 +50,25 @@
             </Grid>
             
         </Border>
-        
+
+        <StackPanel Grid.Row="1"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center">
+
+            <TextBox Name="Display"
+                     Width="300" Height="75"
+                     BorderThickness="0"
+                     Background="#3d3d3d"
+                     Foreground="White"
+                     HorizontalContentAlignment="Right"
+                     VerticalContentAlignment="Bottom"
+                     FontSize="20"
+                     FontWeight="SemiBold"
+                     />
+
+            
+
+        </StackPanel>
         
         
     </Grid>
