--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -63,7 +63,8 @@
                      VerticalContentAlignment="Bottom"
                      FontSize="20"
                      FontWeight="SemiBold"
-                     Margin="0,0,0,20"/>
+                     Margin="0,0,0,20"
+                     IsReadOnly="True"/>
 
             <Grid>
 
